<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        tools:context=".entry.MainActivity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Signup"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="80dp"
        android:textSize="30dp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/abril_fatface">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name: "
            android:textSize="20dp"
            android:textColor="#FFFFFF">
        </TextView>

        <EditText
            android:id="@+id/signup_name_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Name Here"
            android:textColorHint="#FFFFFF"
            android:textColor="#ffffff">
        </EditText>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date of Birth: "
                android:textSize="20dp"
                android:textColor="#FFFFFF">
            </TextView>

            <EditText
                android:id="@+id/signup_dob_edt"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hint="yyyy-MM-dd"
                android:inputType="date"
                android:textColorHint="#FFFFFF"
                android:textColor="#ffffff">
            </EditText>

        </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender: "
            android:textSize="20dp"
            android:textColor="#FFFFFF">
        </TextView>
            <EditText
                android:id="@+id/signup_gender_edt"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hint="Male/Female"
                android:textColorHint="#FFFFFF"
                android:textColor="#ffffff">
            </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age: "
            android:textSize="20dp"
            android:textColor="#FFFFFF">
        </TextView>

        <EditText
            android:id="@+id/signup_age_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="number"
            android:hint="Enter your age between 0-99"
            android:textColorHint="#FFFFFF"
            android:textColor="#ffffff">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="username: "
            android:textSize="20dp"
            android:textColor="#FFFFFF">
        </TextView>

        <EditText
            android:id="@+id/signup_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Username Here"
            android:textColorHint="#FFFFFF"
            android:textColor="#ffffff">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email address: "
            android:textSize="20dp"
            android:textColor="#FFFFFF">
        </TextView>

        <EditText
            android:id="@+id/signup_email_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Email Address Here"
            android:textColorHint="#FFFFFF"
            android:textColor="#ffffff">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="password: "
            android:textSize="20dp"
            android:textColor="#FFFFFF">
        </TextView>

        <EditText
            android:id="@+id/signup_password_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:hint="Enter Password Here"
            android:textColorHint="#FFFFFF"
            android:textColor="#ffffff">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70sp"
            android:text="confirm\npassword: "
            android:textSize="20dp"
            android:textColor="#FFFFFF">
        </TextView>

        <EditText
            android:id="@+id/signup_confirm_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="70dp"
            android:hint="Confirm your Password Here"
            android:textColorHint="#FFFFFF"
            android:textColor="#ffffff">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signup_login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Login"
            android:textSize="20sp"
            android:textColor="#ffffff">
        </Button>

        <Button
            android:id="@+id/signup_signup_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Signup"
            android:textSize="20sp"
            android:textColor="#ffffff">
        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

    <Button
        android:id="@+id/signup_home_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:text="Home"
        android:textSize="20sp"
        android:textColor="#ffffff">

    </Button>
    </LinearLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
